--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "beberlei/assert": "^2.9",
         "ramsey/uuid": "^3.7",
         "roave/security-advisories": "dev-master",
-        "matthiasnoback/php-workshop-tools": "^0.21"
+        "matthiasnoback/php-workshop-tools": "^0.21",
+        "doctrine/orm": "^2.6"
     },
     "autoload": {
         "psr-4": {
