--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,19 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:noNamespaceSchemaLocation="http://schema.phpunit.de/5.7/phpunit.xsd"
-         bootstrap="./bootstrap.php"
-         colors="true">
-    <testsuites>
-        <testsuite name="unit">
-            <directory>./test/Unit</directory>
-        </testsuite>
-        <testsuite name="integration">
-            <directory>./test/Integration</directory>
-        </testsuite>
-    </testsuites>
-    <filter>
-        <whitelist>
-            <directory>src/</directory>
-        </whitelist>
-    </filter>
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/10.1/phpunit.xsd" bootstrap="./bootstrap.php" colors="true" cacheDirectory=".phpunit.cache">
+  <coverage/>
+  <testsuites>
+    <testsuite name="unit">
+      <directory>./test/Unit</directory>
+    </testsuite>
+    <testsuite name="integration">
+      <directory>./test/Integration</directory>
+    </testsuite>
+  </testsuites>
+  <source>
+    <include>
+      <directory>src/</directory>
+    </include>
+  </source>
 </phpunit>
