--- a/composer.json
+++ b/composer.json
@@ -6,19 +6,15 @@
         }
     ],
     "require-dev": {
-        "symfony/var-dumper": "^4.2",
-        "phpstan/phpstan": "^0.11.1",
-        "phpstan/phpstan-beberlei-assert": "^0.11.0",
-        "phpstan/phpstan-phpunit": "^0.11.0",
-        "behat/behat": "^3.5",
-        "phpunit/phpunit": "^7.5"
+        "symfony/var-dumper": "^6.2",
+        "phpstan/phpstan": "^1.10",
+        "phpstan/phpstan-beberlei-assert": "^1.1",
+        "phpstan/phpstan-phpunit": "^1.3",
+        "behat/behat": "^3.13",
+        "phpunit/phpunit": "^10.1"
     },
     "require": {
-        "php": ">=7.1",
-        "beberlei/assert": "^2.9",
-        "ramsey/uuid": "^3.8",
-        "roave/security-advisories": "dev-master",
-        "matthiasnoback/php-workshop-tools": "^0.31.0"
+        "php": ">=8.2"
     },
     "autoload": {
         "psr-4": {
@@ -29,9 +25,6 @@
         "psr-4": {
             "Test\\Acceptance\\": "test/Acceptance",
             "": ["test/Unit", "test/Integration"]
-        },
-        "files": [
-            "vendor/phpunit/phpunit/src/Framework/Assert/Functions.php"
-        ]
+        }
     }
 }
