--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -2,11 +2,8 @@
 <phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/10.1/phpunit.xsd" bootstrap="./bootstrap.php" colors="true" cacheDirectory=".phpunit.cache">
   <coverage/>
   <testsuites>
-    <testsuite name="unit">
-      <directory>./test/Unit</directory>
-    </testsuite>
-    <testsuite name="integration">
-      <directory>./test/Integration</directory>
+    <testsuite name="tests">
+      <directory>./test</directory>
     </testsuite>
   </testsuites>
   <source>
